--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,9 @@ services:
   db:
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     image: postgres:15
     container_name: superset_db
     restart: unless-stopped
@@ -79,9 +79,9 @@ services:
   superset:
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     build:
       <<: *common-build
     container_name: superset_app
@@ -137,9 +137,9 @@ services:
     command: ["/app/docker/docker-init.sh"]
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     depends_on: *superset-depends-on
     user: *superset-user
     volumes: *superset-volumes
@@ -166,9 +166,9 @@ services:
     command: ["/app/docker/docker-frontend.sh"]
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     depends_on: *superset-depends-on
     volumes: *superset-volumes
 
@@ -179,9 +179,9 @@ services:
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     environment:
       CELERYD_CONCURRENCY: 2
     restart: unless-stopped
@@ -203,9 +203,9 @@ services:
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     restart: unless-stopped
     depends_on: *superset-depends-on
     user: *superset-user
@@ -220,9 +220,9 @@ services:
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file:
       - path: docker/.env # default
-        
+        required: true
       - path: docker/.env-local # optional override
-        
+        required: false
     profiles:
       - optional
     environment:
