--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -28,6 +28,7 @@ x-superset-volumes:
   &superset-volumes # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
   - superset_home:/app/superset_home
+  - ./preset-chart-deckgl-osm/:/app/preset-chart-deckgl-osm
 
 x-common-build: &common-build
   context: .
@@ -69,7 +70,7 @@ services:
     user: "root"
     restart: unless-stopped
     ports:
-      - 8088:8088
+      - 8050:8088
     depends_on: *superset-depends-on
     volumes: *superset-volumes
 
