fix: try to re-enable gh-pages (#31152)

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -53,6 +53,9 @@ github:
     merge: false
     rebase: false
 
+  ghp_branch:  gh-pages
+  ghp_path: /
+
   protected_branches:
     master:
       required_status_checks:
