--- a/.asf.yaml
+++ b/.asf.yaml
@@ -91,3 +91,10 @@ github:
         required_approving_review_count: 1
 
       required_signatures: false
+    gh-pages:
+      required_pull_request_reviews:
+        dismiss_stale_reviews: false
+        require_code_owner_reviews: true
+        required_approving_review_count: 1
+
+      required_signatures: false
