--- a/docker/.env
+++ b/docker/.env
@@ -61,19 +61,9 @@ MAPBOX_API_KEY=''
 SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
 
 ENABLE_PLAYWRIGHT=false
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false
 BUILD_SUPERSET_FRONTEND_IN_DOCKER=true
 
-# Firefox configurations
-WEBDRIVER_TYPE=firefox
-INCLUDE_FIREFOX=true
-INCLUDE_CHROMIUM=false
-PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
-
-# WebDriver configurations for Firefox
-WEBDRIVER_BASEURL=http://superset:8088/
-WEBDRIVER_OPTION_ARGS=--headless --marionette
-EMAIL_PAGE_RENDER_WAIT=60
-
-# Enable reporting features
-FEATURE_FLAGS={"ALERT_REPORTS": true, "ENABLE_JAVASCRIPT_CONTROLS": true}
+INCLUDE_CHROMIUM=true
+INCLUDE_FIREFOX=false
 ALERT_REPORTS_NOTIFICATION_DRY_RUN=false
