--- a/docker/.env
+++ b/docker/.env
@@ -63,3 +63,25 @@ SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
 ENABLE_PLAYWRIGHT=false
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
 BUILD_SUPERSET_FRONTEND_IN_DOCKER=true
+
+# Disease Predictor Configuration
+# Visual Crossing API Configuration (Make sure to set this to your actual API key)
+VISUAL_CROSSING_API_KEY=YOUR_VISUAL_CROSSING_API_KEY
+
+# Disease Prediction Pipeline Configuration
+DISEASE_PREDICTION_PIPELINE_FREQUENCY=weekly
+DISEASE_PREDICTION_PIPELINE_RUN_TIME=01:00
+# TODO: Set this to true to run the pipeline immediately on startup
+DISEASE_PREDICTION_PIPELINE_RUN_IMMEDIATE=false
+
+# Model Directories
+DENGUE_MODELS_DIR=dengueModels
+DIARRHEA_MODELS_DIR=diarrheaModels
+
+# Output Directories
+PREDICTIONS_DIR=predictions
+WEATHER_DATA_DIR=weather_data
+
+# Prediction Configuration
+DEFAULT_PREV_CASES=1
+MAX_WEEKS_HISTORY=4
