Created DashboardPageWrapper, updated .env for slice id of overview chart

--- a/docker/.env
+++ b/docker/.env
@@ -85,3 +85,6 @@ WEATHER_DATA_DIR=weather_data
 # Prediction Configuration
 DEFAULT_PREV_CASES=1
 MAX_WEEKS_HISTORY=4
+
+# Slice ID for the Overview Chart
+REACT_APP_SLICE_ID=8
