--- a/docker/.env
+++ b/docker/.env
@@ -86,5 +86,9 @@ WEATHER_DATA_DIR=weather_data
 DEFAULT_PREV_CASES=1
 MAX_WEEKS_HISTORY=4
 
+# Weather Forecast Puller Configuration
+DATAEX_USERNAME=your_username
+DATAEX_PASSWORD=your_password
+
 # Slice ID for the Overview Chart
 REACT_APP_SLICE_ID=8
