reset to last working integrated puller

--- a/crish-weather-forecast-puller/Dockerfile
+++ b/crish-weather-forecast-puller/Dockerfile
@@ -26,22 +26,11 @@ ENV PYTHONUNBUFFERED=1 \
     HOME=/home/datauser \
     DOCKER_ENV=true
 
-# Create fresh pixi environment and verify installation
-RUN pixi install && \
-    echo "Verifying pixi environment..." && \
-    pixi run python --version && \
-    pixi list && \
-    echo "Installing dataex-client scripts..." && \
-    pixi run pip install --no-deps git+https://github.com/nzahasan/dataex-client.git@8516eea9000bf2b3637caecca31b703b4dcef737 && \
-    echo "Verifying dataex-client installation..." && \
-    pixi run which dataex_region_data_analysis.py
+# Create fresh pixi environment
+RUN pixi install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD pg_isready -h $DATABASE_HOST -p $DATABASE_PORT -U $DATABASE_USER || exit 1
-
-# Add debug wrapper script
-COPY --chown=datauser:datauser scripts/debug-wrapper.sh ./
-RUN chmod +x debug-wrapper.sh
 
 ENTRYPOINT ["/app/scripts/docker-entrypoint.sh"]
 CMD ["pixi", "run", "python", "scripts/scheduled_pull.py"]
