--- a/crish-weather-forecast-puller/.env-example
+++ b/crish-weather-forecast-puller/.env-example
@@ -3,8 +3,9 @@ DATAEX_USERNAME=name@domain.com
 DATAEX_PASSWORD=your-password
 
 # PostgreSQL Database Credentials
-POSTGRES_HOST=host
-POSTGRES_PORT=port
-POSTGRES_DB=database
-POSTGRES_USER=username
-POSTGRES_PASSWORD=password
+DATABASE_DB=superset
+DATABASE_HOST=db
+# Make sure you set this to a unique secure random value on production
+DATABASE_PASSWORD=superset
+DATABASE_USER=superset
+DATABASE_PORT=5432
