--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,5 +1,5 @@
 numpy
-tensorflow
+tensorflow-cpu
 python-dotenv
 requests
 psycopg2-binary
@@ -7,4 +7,4 @@ joblib
 schedule
 isoweek
 scikit-learn
-pandas 
+pandas<2.1.0 
