--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-tensorflow-cpu
+numpy<1.24.0
+tensorflow-cpu<2.14.0
 python-dotenv
 requests
 psycopg2-binary
 joblib
 schedule
 isoweek
-scikit-learn
+scikit-learn<1.3.0
 pandas<2.1.0 
