--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,10 +1,9 @@
-numpy<1.24.0
-tensorflow-cpu<2.14.0
+numpy==1.16.4
 python-dotenv
 requests
 psycopg2-binary
-joblib
+joblib<1.1.0
 schedule
 isoweek
-scikit-learn<1.3.0
-pandas<2.1.0 
+scikit-learn==0.22.2
+pandas==0.25.3 
