--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,9 +1,10 @@
-numpy==1.16.4
+numpy<1.24.0
+tensorflow-cpu<2.14.0
 python-dotenv
 requests
 psycopg2-binary
-joblib<1.1.0
+joblib
 schedule
 isoweek
-scikit-learn==0.22.2
-pandas==0.25.3 
+scikit-learn<1.3.0
+pandas<2.1.0 
