--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,10 +1,10 @@
-numpy<1.24.0
-tensorflow-cpu<2.14.0
+numpy
+tensorflow-cpu
 python-dotenv
 requests
 psycopg2-binary
 joblib
 schedule
 isoweek
-scikit-learn<1.3.0
+scikit-learn
 pandas<2.1.0 
