Revert "Update requirements.txt"
This reverts commit 2c0ea736a4ba0dc2e053b3a8c4b17a8b29b8cc3b.

--- a/crish-disease-predictor/requirements.txt
+++ b/crish-disease-predictor/requirements.txt
@@ -1,5 +1,5 @@
 numpy
-tensorflow-cpu
+tensorflow
 python-dotenv
 requests
 psycopg2-binary
@@ -7,4 +7,4 @@ joblib
 schedule
 isoweek
 scikit-learn
-pandas<2.1.0 
+pandas 
