--- a/docker/.env
+++ b/docker/.env
@@ -92,3 +92,6 @@ DATAEX_PASSWORD=your_password
 
 # Slice ID for the Overview Chart
 REACT_APP_SLICE_ID=8
+
+# Case Reports Table
+CASE_REPORTS_TABLE=tlhis_diseases
