custom age and gender field for user model

--- a/docker/pythonpath_dev/.gitignore
+++ b/docker/pythonpath_dev/.gitignore
@@ -21,3 +21,6 @@
 !.gitignore
 !superset_config.py
 !superset_config_local.example
+!custom_auth/custom_security_manager.py
+!custom_auth/custom_user_models.py
+!custom_auth
