--- a/docker/.env
+++ b/docker/.env
@@ -95,3 +95,12 @@ REACT_APP_SLICE_ID=8
 
 # Case Reports Table
 CASE_REPORTS_TABLE=tlhis_diseases
+
+# Minio Configuration
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+S3_BUCKET=crish-attachments
+S3_ENDPOINT_URL=http://minio:9000
+S3_ADDRESSING_STYLE=path
+S3_PRESIGNED_URL_EXPIRATION=3600
+S3_PUBLIC_ENDPOINT_URL=http://localhost:9090
