--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,7 +287,7 @@ services:
     user: "root"
 
   minio:
-    image: minio/minio:RELEASE.2025-04-22T22-12-26Z # You can use 'latest' or a specific version
+    image: minio/minio:RELEASE.2023-12-07T18-12-24Z # Changed to an older release
     container_name: superset_minio
     env_file:
       - path: docker/.env # default (assuming MINIO_ROOT_USER and MINIO_ROOT_PASSWORD will be here)
