--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,7 +287,7 @@ services:
     user: "root"
 
   minio:
-    image: minio/minio:RELEASE.2023-12-07T18-12-24Z # Changed to an older release
+    image: jessestuart/minio:latest # Changed to multi-arch image
     container_name: superset_minio
     env_file:
       - path: docker/.env # default (assuming MINIO_ROOT_USER and MINIO_ROOT_PASSWORD will be here)
