--- a/docker-compose-image-tag.yml
+++ b/docker-compose-image-tag.yml
@@ -165,7 +165,7 @@ services:
     user: "root"
 
   minio:
-    image: minio/minio:jessestuart/minio:latest # You can update this version if desired
+    image: jessestuart/minio:latest # Ensure multi-arch image
     container_name: superset_minio
     env_file:
       - path: docker/.env # default
@@ -177,7 +177,7 @@ services:
       - "9091:9001" # Console port changed
     volumes:
       - minio_data:/data
-    command: server /data --console-address ":9001"
+    command: server /data # Removed --console-address flag
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
