--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -299,7 +299,7 @@ services:
       - "9091:9001" # Console port changed
     volumes:
       - minio_data:/data
-    command: server /data --console-address ":9001"
+    command: server /data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
