reverted to the latest minio version

--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -174,7 +174,7 @@ services:
     user: "root"
 
   minio:
-    image: jessestuart/minio:latest # Ensure multi-arch image
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z # You can update this version if desired
     container_name: superset_minio
     env_file:
       - path: docker/.env # default
@@ -186,7 +186,7 @@ services:
       - "9091:9001" # Console port changed
     volumes:
       - minio_data:/data
-    command: server /data # Removed --console-address flag
+    command: server /data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
