--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -287,10 +287,10 @@ services:
     user: "root"
 
   minio:
-    image: jessestuart/minio:latest # Changed to multi-arch image
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z # You can update this version if desired
     container_name: superset_minio
     env_file:
-      - path: docker/.env # default (assuming MINIO_ROOT_USER and MINIO_ROOT_PASSWORD will be here)
+      - path: docker/.env # default
         required: true
       - path: docker/.env-local # optional override
         required: false
@@ -299,7 +299,7 @@ services:
       - "9091:9001" # Console port changed
     volumes:
       - minio_data:/data
-    command: server /data
+    command: server /data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
