--- a/docker-compose-image-tag.yml
+++ b/docker-compose-image-tag.yml
@@ -179,7 +179,7 @@ services:
       - minio_data:/data
     command: server /data --console-address ":9001"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD-SHELL", "mc alias set myminio http://localhost:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} && mc admin info myminio"]
       interval: 30s
       timeout: 20s
       retries: 3
