better date formats for generated map and table charts for bulletins

--- a/crish-weather-forecast-puller/docker-compose.yml
+++ b/crish-weather-forecast-puller/docker-compose.yml
@@ -9,4 +9,5 @@ services:
     env_file: .env
     volumes:
       - ./data:/app/data
+      - /Users/ericksoncruz/Documents/RIMES/superset/superset-frontend/plugins/preset-chart-deckgl-osm/src/layers/Country/countries/timorleste.geojson:/app/config/timorleste.geojson:ro
     restart: unless-stopped 
