--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     container_name: superset_db
     restart: unless-stopped
     ports:
-      - "127.0.0.1:5432:5432"
+      - "5432:5432"
     volumes:
       - db_home:/var/lib/postgresql/data
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
@@ -260,6 +260,7 @@ services:
     container_name: superset_weather_forecast_puller
     volumes:
       - ./crish-weather-forecast-puller/data:/app/data
+      - ./superset-frontend/plugins/preset-chart-deckgl-osm/src/layers/Country/countries/timorleste.geojson:/app/config/timorleste.geojson:ro
     env_file:
       - path: docker/.env # default
         required: true
@@ -300,28 +301,28 @@ services:
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
-    healthcheck:
-      test: ["CMD-SHELL", "mc alias set myminio http://localhost:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} && mc admin info myminio"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD-SHELL", "mc alias set myminio http://localhost:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} && mc admin info myminio"]
+    #   interval: 30s
+    #   timeout: 20s
+    #   retries: 3
     restart: unless-stopped
 
-  minio-init:
-    image: minio/mc
-    container_name: superset_minio_init
-    depends_on:
-      minio:
-        condition: service_healthy
-    env_file:
-      - path: docker/.env # For MINIO_ROOT_USER, MINIO_ROOT_PASSWORD, S3_BUCKET
-        required: true
-      - path: docker/.env-local # optional override
-        required: false
-    entrypoint: /app/docker/minio-init-bucket.sh
-    volumes:
-      - ./docker/minio-init-bucket.sh:/app/docker/minio-init-bucket.sh:ro
-    restart: "no"
+  # minio-init:
+  #   image: minio/mc
+  #   container_name: superset_minio_init
+  #   depends_on:
+  #     minio:
+  #       condition: service_healthy
+  #   env_file:
+  #     - path: docker/.env # For MINIO_ROOT_USER, MINIO_ROOT_PASSWORD, S3_BUCKET
+  #       required: true
+  #     - path: docker/.env-local # optional override
+  #       required: false
+  #   entrypoint: /app/docker/minio-init-bucket.sh
+  #   volumes:
+  #     - ./docker/minio-init-bucket.sh:/app/docker/minio-init-bucket.sh:ro
+  #   restart: "no"
 
 volumes:
   superset_home:
