--- a/crish-disease-predictor/Dockerfile
+++ b/crish-disease-predictor/Dockerfile
@@ -3,8 +3,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN rm -rf /var/lib/apt/lists/* && apt-get update && apt-get install -y \
     gcc \
+    g++ \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first to leverage Docker cache
