removed fcm and disabled workers and beat for faster deployment

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,6 @@ test-report.html
 superset/static/stats/statistics.html
 db_initializer/facilities/~$tl_health_facilities_edited.xlsx
 superset-frontend/.temp_cache/
+
+progress-docs
+crish-documentation
