--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ classifiers = [
 ]
 dependencies = [
     "backoff>=1.8.0",
+    "boto3>=1.20.0",  # Added for MinIO/S3 integration
     "celery>=5.3.6, <6.0.0",
     "click>=8.0.3",
     "click-option-group",
@@ -44,19 +45,23 @@ dependencies = [
     "cron-descriptor",
     "cryptography>=42.0.4, <44.0.0",
     "deprecation>=2.1.0, <2.2.0",
+    "facebook-sdk",  # Added for Facebook dissemination
     "flask>=2.2.5, <3.0.0",
     "flask-appbuilder>=4.5.0, <5.0.0",
     "flask-caching>=2.1.0, <3",
     "flask-compress>=1.13, <2.0",
+    "Flask-Mail",
+    "Flask-OIDC==2.2.0",
+    "Flask-OpenID==1.3.1",
     "flask-talisman>=1.0.0, <2.0",
     "flask-login>=0.6.0, < 1.0",
     "flask-migrate>=3.1.0, <4.0",
     "flask-session>=0.4.0, <1.0",
     "flask-wtf>=1.1.0, <2.0",
     "func_timeout",
+    "geoalchemy2",
     "geopy",
     "greenlet>=3.0.3, <=3.1.1",
-    "firebase-admin>=6.0.0, <7.0",
     "gunicorn>=22.0.0; sys_platform != 'win32'",
     "hashids>=1.3.1, <2",
     # known issue with holidays 0.26.0 and above related to prophet lib #25017
@@ -64,6 +69,7 @@ dependencies = [
     "humanize",
     "importlib_metadata",
     "isodate",
+    "isoweek",
     "jsonpath-ng>=1.6.1, <2",
     "Mako>=1.2.2",
     "markdown>=3.0",
@@ -84,7 +90,9 @@ dependencies = [
     "pyyaml>=6.0.0, <7.0.0",
     "PyJWT>=2.4.0, <3.0",
     "redis>=4.6.0, <5.0",
+    "reportlab>=3.6.0",
     "selenium>=3.141.0, <4.10.0",
+    "shapely",
     "shillelagh[gsheetsapi]>=1.2.18, <2.0",
     "shortid",
     "sshtunnel>=0.4.0, <0.5",
@@ -92,6 +100,7 @@ dependencies = [
     "slack_sdk>=3.19.0, <4",
     "sqlalchemy>=1.4, <2",
     "sqlalchemy-utils>=0.38.3, <0.39",
+    "sqlitedict==2.1.0",
     # known breaking changes in sqlglot 25.25.0
     #https://github.com/tobymao/sqlglot/blob/main/CHANGELOG.md#v25250---2024-10-14
     "sqlglot>=25.24.0,<25.25.0",
