Update env vars, docs, and configs for dissemination module
Standardized environment variable names for disease model directories and updated .env to match new directory structure. Revised weather parameter thresholds for heat index and rainfall in documentation. Enhanced CORS configuration and branding in Superset config, and added a configuration comparison document. Added a detailed progress report for Dissemination Bulletin Log UI enhancements and improved .gitignore handling for progress-docs and documentation files.

--- a/docker/.env
+++ b/docker/.env
@@ -52,7 +52,7 @@ REDIS_PORT=6379
 
 FLASK_DEBUG=true
 SUPERSET_ENV=development
-SUPERSET_LOAD_EXAMPLES=yes
+SUPERSET_LOAD_EXAMPLES=no
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
 MAPBOX_API_KEY=''
@@ -60,9 +60,8 @@ MAPBOX_API_KEY=''
 # Make sure you set this to a unique secure random value on production
 SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
 
-ENABLE_PLAYWRIGHT=false
 PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
-BUILD_SUPERSET_FRONTEND_IN_DOCKER=true
+BUILD_SUPERSET_FRONTEND_IN_DOCKER=false
 
 # Disease Predictor Configuration
 # Visual Crossing API Configuration (Make sure to set this to your actual API key)
@@ -75,8 +74,9 @@ DISEASE_PREDICTION_PIPELINE_RUN_TIME=01:00
 DISEASE_PREDICTION_PIPELINE_RUN_IMMEDIATE=false
 
 # Model Directories
-DENGUE_MODELS_DIR=dengueModels
-DIARRHEA_MODELS_DIR=diarrheaModels
+DENGUE_MODELS_DIR=new_models/Dengue
+DIARRHEA_MODELS_DIR=new_models/Diarrhea
+ISPA_MODELS_DIR=new_models/ISPA
 
 # Output Directories
 PREDICTIONS_DIR=predictions
@@ -90,9 +90,6 @@ MAX_WEEKS_HISTORY=4
 DATAEX_USERNAME=your_username
 DATAEX_PASSWORD=your_password
 
-# Slice ID for the Overview Chart
-REACT_APP_SLICE_ID=8
-
 # Case Reports Table
 CASE_REPORTS_TABLE=tlhis_diseases
 
@@ -105,13 +102,16 @@ S3_ADDRESSING_STYLE=path
 S3_PRESIGNED_URL_EXPIRATION=3600
 S3_PUBLIC_ENDPOINT_URL=http://localhost:9090
 
-FACEBOOK_APP_ID = your_app_id
-FACEBOOK_APP_SECRET = your_app_secret
-FACEBOOK_PAGE_ID = your_page_id
-FACEBOOK_ACCESS_TOKEN = your_access_token
+FACEBOOK_APP_ID=your_app_id
+FACEBOOK_APP_SECRET=your_app_secret
+FACEBOOK_PAGE_ID=your_page_id
+FACEBOOK_ACCESS_TOKEN=your_access_token
 
-WHATSAPP_CLOUD_API_VERSION = v22.0
-WHATSAPP_PHONE_NUMBER_ID = your_phone_number_id
-WHATSAPP_BUSINESS_ACCOUNT_ID = your_business_account_id
-WHATSAPP_ACCESS_TOKEN = your_access_token
-WHATSAPP_DEFAULT_TEMPLATE_NAME = bulletin_alert
+WHATSAPP_CLOUD_API_VERSION=v22.0
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id
+WHATSAPP_ACCESS_TOKEN=your_access_token
+WHATSAPP_DEFAULT_TEMPLATE_NAME=bulletin_alert
+
+RECAPTCHA_PUBLIC_KEY=your_recaptcha_public_key
+RECAPTCHA_PRIVATE_KEY=your_recaptcha_private_key
