Add BUILD_TRANSLATIONS arg to Docker Compose configs
Introduces the BUILD_TRANSLATIONS build argument to both docker-compose.yml and docker-compose-non-dev.yml under the common build configuration. This enables translation building during the Docker image build process.

--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -35,6 +35,8 @@ x-common-build: &common-build
   target: dev
   cache_from:
     - apache/superset-cache:3.10-slim-bookworm
+  args:
+    BUILD_TRANSLATIONS: "true"
 
 services:
   redis:
