--- a/docker/.env
+++ b/docker/.env
@@ -115,3 +115,6 @@ WHATSAPP_DEFAULT_TEMPLATE_NAME=bulletin_alert
 
 RECAPTCHA_PUBLIC_KEY=your_recaptcha_public_key
 RECAPTCHA_PRIVATE_KEY=your_recaptcha_private_key
+
+# Certbot email for SSL certificates
+CERTBOT_EMAIL=admin@dnmg.gov.tl
