Configure SSL/HTTPS for MinIO S3 service
- Add nginx proxy configuration for s3.dnmg.gov.tl
- Configure SSL termination for MinIO API endpoint
- Update S3_PUBLIC_ENDPOINT_URL to use HTTPS
- Remove direct port exposure from MinIO container
- Add optional minio-console subdomain configuration

--- a/docker/.env
+++ b/docker/.env
@@ -100,7 +100,7 @@ S3_BUCKET=crish-attachments
 S3_ENDPOINT_URL=http://minio:9000
 S3_ADDRESSING_STYLE=path
 S3_PRESIGNED_URL_EXPIRATION=3600
-S3_PUBLIC_ENDPOINT_URL=http://localhost:9090
+S3_PUBLIC_ENDPOINT_URL=https://s3.dnmg.gov.tl
 
 FACEBOOK_APP_ID=your_app_id
 FACEBOOK_APP_SECRET=your_app_secret
