--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -225,9 +225,10 @@ services:
         required: false
     environment:
       - MINIO_DISK_USAGE_THRESHOLD=5.0
-    ports:
-      - "9090:9000" # API port changed
-      - "9091:9001" # Console port changed
+    # Ports removed - nginx handles external access
+    # ports:
+    #   - "9090:9000" # API port
+    #   - "9091:9001" # Console port
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
